# QueryQuiver

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
query_quiver/: chrome_history.py  cli.py  downloader.py  generator.py  logger.py  prompt.py  types.py
tests/: test_chrome_history.py  test_downlader.py  test_prompt.py
